app-9/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-blue-service
spec:
  selector:
    app: myapp
    version: blue
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-green-service
spec:
  selector:
    app: myapp
    version: green
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
