app-9/kubernetes/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: / # rewrite-target :
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: myapp-blue-service
              port:
                number: 80
